--- a/techconnect/templates/techconnect/about.html
+++ b/techconnect/templates/techconnect/about.html
@@ -4,11 +4,11 @@
 
 {% block body %}
 <!-- ##### Breadcumb Area Start ##### -->
-<div class="breadcumb-area bg-img" style="background-image: url(img/bg-img/breadcumb.jpg);">
+<!-- <div class="breadcumb-area bg-img" style="background-image: url(img/bg-img/breadcumb.jpg);">
     <div class="bradcumbContent">
         <h2>TechConnect</h2>
     </div>
-</div>
+</div> -->
 <!-- ##### Breadcumb Area End ##### -->
 
 <!-- ##### About Us Area Start ##### -->
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 wow fadeInUp" data-wow-delay="400ms">
-                <h4 style=" text-decoration: underline;">About The Event</h4>
+                <h4 style=" text-decoration: underline;">About TechConnect</h4>
                 <p style="text-align: justify;">Techconnect is a pre-festival zonal event which comprises of preliminary
                     rounds of some major
                     competitions of Advitiya. Techconnect comprises of engaging professional technical workshops to
@@ -28,6 +28,13 @@
                     pages and in the website of <b>Advitiya, IIT Ropar</b>. Association with Techconnect will help your
                     institute garner positive publicity and it reach a wider audience all across the span of the
                     country. </p>
+                    <div class="breadcumb-area bg-img" style= "height: 50px;">
+                        <div class="bradcumbContent">
+                            <a href = "https://drive.google.com/file/d/1BqWz24T7HJr04lPvbsa82sqMmd7-43zn/view?usp=sharing">
+                                <h2>View more Details</h2>
+                            </a>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
