--- a/techconnect/templates/techconnect/base.html
+++ b/techconnect/templates/techconnect/base.html
@@ -42,7 +42,7 @@
                                 <a style="font-size: 2em;" href="{% url 'techconnect:index' %}">TechConnect</a>
                             </div>
                             <div class="login-content">
-                                <a href="{% url 'techconnect:register' %}">Register / Login</a>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScqQ3vzhkoAOe9eMAZEXt-PWovuQGDI7ArH210nXlslbPo3ew/viewform">Register</a>
                             </div>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li><a href="{% url 'techconnect:index' %}">Home</a></li>
+                                    <li><a href="{% url 'main_page:index' %}">Home</a></li>
                                     <li><a href="{% url 'techconnect:about' %}">About</a></li>
                                     <li><a href="{% url 'techconnect:contact' %}">Contacts</a></li>
                                 </ul>
