--- a/techconnect/templates/techconnect/index.html
+++ b/techconnect/templates/techconnect/index.html
@@ -9,15 +9,14 @@
     <div class="hero-slides owl-carousel">
 
         <!-- Single Hero Slide -->
-        <div class="single-hero-slide bg-img" style="background-image: url({% static 'techconnect/img/computer-vision.jpg' %})">
+        <div class="single-hero-slide bg-img" style="background-image: url({% static 'techconnect/img/bg.jpg' %})">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-12">
                         <div class="hero-slides-content">
                             <!-- <h4 data-animation="fadeInUp" data-delay="100ms">All the courses you need</h4> -->
                             <h2 data-animation="fadeInUp" data-delay="400ms">TechConnect</h2>
-                            <a href="{% url 'techconnect:about' %}" class="btn academy-btn" data-animation="fadeInUp" data-delay="700ms">Read
-                                More</a>
+                            <a href="{% url 'techconnect:about' %}" class="btn academy-btn" data-animation="fadeInUp" data-delay="700ms">Explore</a>
                         </div>
                     </div>
                 </div>
