Register link on navbar

--- a/techconnect/templates/techconnect/base.html
+++ b/techconnect/templates/techconnect/base.html
@@ -76,6 +76,7 @@
                                     <li><a href="{% url 'main_page:index' %}">Home</a></li>
                                     <li><a href="{% url 'techconnect:about' %}">About</a></li>
                                     <li><a href="{% url 'techconnect:contact' %}">Contacts</a></li>
+                                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScqQ3vzhkoAOe9eMAZEXt-PWovuQGDI7ArH210nXlslbPo3ew/viewform">Register</a></li>
                                 </ul>
                             </div>
                             <!-- Nav End -->
