--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -8,11 +8,11 @@
         <div class="row h-100 align-items-center">
             <div class="col-12">
                 <div class="breadcrumb-content">
-                    <h2 class="page-title">About Us</h2>
+                    <h2 class="page-title">Workshops</h2>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="{% url 'main_page:index' %}">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">About us</li>
+                            <li class="breadcrumb-item active" aria-current="page">Workshops</li>
                         </ol>
                     </nav>
                 </div>
@@ -29,66 +29,28 @@
             <!-- Heading -->
             <div class="col-12">
                 <div class="section-heading-3 text-center wow fadeInUp" data-wow-delay="300ms">
-                    <p>Summit Meeting</p>
-                    <h2>What We Offer</h2>
+                    <h2>Workshops at IIT Ropar</h2>
                 </div>
             </div>
         </div>
 
         <div class="row">
-            <!-- Single We Offer Area -->
-            <div class="col-12 col-md-6 col-xl-3">
-                <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <!-- Icon -->
-                    <div class="offer-icon">
-                        <img src="img/core-img/icon.png" alt="">
+            {% for workshop in workshops %}
+                <!-- Single We Offer Area -->
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                        <!-- Icon -->
+                        <div class="offer-icon">
+                            <img src="img/core-img/icon.png" alt="">
+                        </div>
+                        <h5>{{workshop.name}}</h5>
+                        <p>Register for this workshop here</p>
+                    <a href="{% url 'main_page:workshop_register' workshop.id  %}" class="btn btn-primary">Register Now!!!</a>
+                
                     </div>
-                    <h5>Conference</h5>
-                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque</p>
-                <a href="{% url 'main_page:workshop_register'  %}" class="btn btn-primary">Register Now!!!</a>
-            
+                
                 </div>
-            
-            </div>
-
-            <!-- Single We Offer Area -->
-            <div class="col-12 col-md-6 col-xl-3">
-                <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <!-- Icon -->
-                    <div class="offer-icon">
-                        <img src="img/core-img/icon-2.png" alt="">
-                    </div>
-                    <h5>Workshops</h5>
-                    <p>Temporibus autem quibusdam et aut officiis debitis aut rerum</p>
-                    <a href="{% url 'main_page:workshop_register'  %}" class="btn btn-primary">Register Now!!!</a>
-                </div>
-            </div>
-
-            <!-- Single We Offer Area -->
-            <div class="col-12 col-md-6 col-xl-3">
-                <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <!-- Icon -->
-                    <div class="offer-icon">
-                        <img src="img/core-img/icon-3.png" alt="">
-                    </div>
-                    <h5>Coffee Breaks</h5>
-                    <p>On the other hand, we denounce with righteous indignation</p>
-                    <a href="{% url 'main_page:workshop_register'  %}" class="btn btn-primary">Register Now!!!</a>
-                </div>
-            </div>
-
-            <!-- Single We Offer Area -->
-            <div class="col-12 col-md-6 col-xl-3">
-                <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <!-- Icon -->
-                    <div class="offer-icon">
-                        <img src="img/core-img/icon-4.png" alt="">
-                    </div>
-                    <h5>Events</h5>
-                    <p>These cases are perfectly simple and easy to distinguish in a free hour</p>
-                    <a href="{% url 'main_page:workshop_register'  %}" class="btn btn-primary">Register Now!!!</a>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
     
