Workshop UI done

--- a/main_page/static/main_page/css/style.css
+++ b/main_page/static/main_page/css/style.css
@@ -1322,7 +1322,7 @@ h3 {
   position: relative;
   z-index: 1;
   -webkit-box-shadow: 0px 8px 27px 0px rgba(90, 111, 120, 0.15);
-  box-shadow: 0px 8px 27px 0px rgba(90, 111, 120, 0.15);
+  box-shadow: 0px 8px 27px 0px rgb(0, 9, 114);
   border-radius: 10px;
   padding: 30px 25px;
   margin-bottom: 30px;
