--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -52,6 +52,7 @@
                             <ul id="nav" class="resizeflex">
                                 <li><a href="{% url 'main_page:events'%}">Events</a></li>
                                 <li><a href="{% url 'techconnect:index'%}">TechConnect</a></li>
+                                <li><a href="{% url 'main_page:workshop'%}">Workshops</a></li>
                                 <li><a href="{% url 'main_page:sponsors'%}">Sponsors</a></li>
                                 <li><a href="{% url 'TSP:home' %}">TSP</a></li>
 
