--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -3,18 +3,39 @@
 
 {% block body %}
 
-<section class="breadcrumb-area bg-img bg-gradient-overlay jarallax" style="background-image: url(img/bg-img/27.jpg);">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <div class="col-12">
-                <div class="breadcrumb-content">
-                    <h2 class="page-title">Workshops</h2>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="{% url 'main_page:index' %}">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Workshops</li>
-                        </ol>
-                    </nav>
+<section class="about-us-countdown-area section-padding-100-0"
+ style="background-image:url({% static 'main_page/img/bg-img/college_bg.jpg' %}); background-repeat:
+    no-repeat; background-size: cover;" id="about">
+    <div class="container">
+        <div class="row align-items-center">
+            <!-- About Content -->
+            <div class="col-md-8 mx-auto" style="background-color: rgba(0, 0, 0, 0.7); margin-top: 50px;
+             margin-bottom: 50px; border-radius: 20px; padding: 50px;">
+                <br>
+                <div class="about-content-text" style="color: white;">
+                    <h3>Important Note</h3>
+                    <ul>
+                        Exclusively for the workshop participants, we provide accomodation at cheaper rates. Get accomodation @ Rs.250 
+                            per day and enjoy a relaxing stay with 2 meals included.
+                    </ul>
+                    <br>
+                    <h3>Workshop Registration Process</h3>
+                    <br>
+                    <ul>
+                        <li style="list-style-type:disc;">
+                            Step 1: Register as a participant and get your ADVITIYA ID. <a
+                                href="{% url 'main_page:register_as_participant' %}"
+                                style="color: blue;">(Click Here)</a>
+                        </li>
+                        <li style="list-style-type:disc;">
+                            Step 2: Register for the workshops.
+                        </li>
+                        <li style="list-style-type:disc;">
+                            Step 3: [Optional] Get accomodation. <a
+                            href="{% url 'main_page:workshop_accomodation' %}"
+                            style="color: blue;">(Click Here)</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -43,11 +64,15 @@
                 <div class="col-12 col-md-6 col-xl-4">
                     <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                         <!-- Icon -->
-                        <div class="offer-icon">
-                            <img src="img/core-img/icon.png" alt="">
+                        <div class="single-blog-thumb">
+                            <center><a href="{% url 'main_page:workshop_register' workshop.id  %}">
+                                    <img src="{{ workshop.image.url }}" style="height: 200px;" alt=""></a>
+                            </center>
                         </div>
                         <h5>{{workshop.name}}</h5>
-                        <p>Register for this workshop here</p>
+                        <h6>Fee: Rs {{ workshop.fees }}</h6>
+                        <!-- <p>Register for this workshop here</p> -->
+                        <br>
                     <a href="{% url 'main_page:workshop_register' workshop.id  %}" class="btn confer-btn-white" 
                         style = "border: 2px solid rgb(43, 2, 143); color: black;" 
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register Now!!!</a>
