--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -134,14 +134,16 @@
                     <div class="col-12 col-sm-6 col-lg-4">
                         <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
                             <!-- Widget Title -->
-                            <h5 class="widget-title">Workshops</h5>
-
+                            <h5 class="widget-title"><a style="color: white;">Workshops</a></h5>
+                            <ul class="footer-nav">
+                                <li><a href="{% url 'techconnect:index'%}">TechConnect</a></li>
+                                <li><a href="{% url 'main_page:workshop'%}">Workshops at IIT Ropar</a></li>
+                            </ul>
+                            <br>
+                            <h5 class="widget-title"><a href="#" style="color: white;">Talks</a></h5>
                             <!-- Footer Nav -->
                             <ul class="footer-nav">
                                 <li><a href="#">Revealing Soon</a></li>
-                                <!-- <li><a href="#">Microsoft Excel Basics</a></li>
-                                <li><a href="#">Forum Speaker Series</a></li>
-                                <li><a href="#">Tedx Moscow Conference</a></li> -->
                             </ul>
                         </div>
                     </div>
