--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -709,8 +709,72 @@
             <!-- Heading -->
             <div class="col-12">
                 <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                    <p>Revealing Soon</p>
+                    <!-- <p>Revealing Soon</p> -->
                     <h4>Lecture Series</h4>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                    <!-- Single blog Thumb -->
+                    <div class="single-blog-thumb">
+                        <img src="{% static 'main_page/img/core_team/Ashish_finance.jpeg' %}" alt="">
+                    </div>
+                    <div class="single-blog-text text-center">
+                        <a class="blog-title" href="#">Tedx Moscow Conference</a>
+                        <!-- Post Meta -->
+                        <div class="post-meta">
+                            <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i>January 14, 2019</a>
+                            <a class="post-author" href="#"><i class="zmdi zmdi-account"></i>Laura Green</a>
+                        </div>
+                        <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
+                    </div>
+                    <div class="blog-btn">
+                        <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Blog Area -->
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                    <!-- Single blog Thumb -->
+                    <div class="single-blog-thumb">
+                        <img src="{% static 'main_page/img/core_team/Ashish_finance.jpeg' %}" alt="">
+                    </div>
+                    <div class="single-blog-text text-center">
+                        <a class="blog-title" href="#">Tedx Moscow Conference</a>
+                        <!-- Post Meta -->
+                        <div class="post-meta">
+                            <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i>January 14, 2019</a>
+                            <a class="post-author" href="#"><i class="zmdi zmdi-account"></i>Laura Green</a>
+                        </div>
+                        <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
+                    </div>
+                    <div class="blog-btn">
+                        <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single Blog Area -->
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                    <!-- Single blog Thumb -->
+                    <div class="single-blog-thumb">
+                        <img src="{% static 'main_page/img/core_team/Ashish_finance.jpeg' %}" alt="">
+                    </div>
+                    <div class="single-blog-text text-center">
+                        <a class="blog-title" href="#">Tedx Moscow Conference</a>
+                        <!-- Post Meta -->
+                        <div class="post-meta">
+                            <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i>January 14, 2019</a>
+                            <a class="post-author" href="#"><i class="zmdi zmdi-account"></i>Laura Green</a>
+                        </div>
+                        <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
+                    </div>
+                    <div class="blog-btn">
+                        <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
