--- a/TSP/templates/TSP/index.html
+++ b/TSP/templates/TSP/index.html
@@ -17,21 +17,32 @@
 
 <div class="container about-advitiya">
     <div class="row justify-content-center text-center mb-5">
-        <div class="col-md-6">
-            <h2 class="mb-4"><strong>About Advitiya</strong></h2>
+        <div class="col-md-8">
+            <h2 class="mb-4"><strong>About TSP</strong></h2>
             <p style="text-align:justify; font-size:1.3em">
-                IIT Ropar is
-                                organizing the fourth edition of it's annual Science & Technology Festival "Advitiya" in the first
-                                week of of February consisting of 72 hours of intense competitions and technical events.
-                                Advitiya has already evolved into a brand within four years of its inception. 
-                                Advitiya achieved more than 15k footfall and conducted 30+ events in its previous edition. 
-                                Advitiya, in its past few editions, not only has created a buzz in the minds of Techno-enthusiasts 
-                                but has also provided its partners and sponsors a platform for their publicity. 
-                                With an array of activities that consolidate the vision for
-                                times to come, Advitiya 2020 is ready to set the scientific spirits soaring and
-                                technological temper ablaze. Advitiya will witness a wide range of scientific and technical activities, 
-                                and novel events from fields like Coding, Aeromodelling, Robotics, Finance, Design and Entrepreneurship 
-                                with total prizes worth as high as 9 lakh Rupees.
+                Advitiya 2020 is proud to announce its first edition of School Outreach Program: <strong>Techno School Program(TSP)</strong>. 
+                It will be a two-phase competition with talented students from prestigious schools participating in two categories namely:
+               <strong> <br>Category 1: Class IX & X<br>
+                Category 2: Class XI & XII<br></strong>
+
+                The events organized for school students are as follows:<br>
+                1. Advitiya Open Olympiad:
+                
+                <ul style="text-align: justify;">
+                <li>Preliminary test on 18 Jan 2020 (Saturday) in respective schools</li>
+                <li>The finale on 8th Feb 2020(Saturday) at IIT Ropar campus</li>
+                <li>The prizes of the competition are worth 25k.</li>
+                <li>Top 25 participants from each category will be selected for the finale.</li>
+                <li>Registration fee for the Olympiad is INR 50</li>
+                <li>Please register your schools at <a href="{% url 'main_page:index'  %}">www.advitiya.in</a> </li>
+                </ul>
+                <p style="text-align:justify; font-size: 20.8px;">2. Techwalk <br>
+                3. Junior Scientist Competition:</p>
+                <ul style="text-align: justify;">
+                <li>a. Each school is allowed to bring three projects accompanied by three students each .</li>
+                <li>b. Students should bring a brief printed report along with their project.</li>
+                <li>c. There is no registration fee for this competition .</li>
+                </ul>
             </p>
 
         </div>
