--- a/ca/templates/ca/index.html
+++ b/ca/templates/ca/index.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 <div class="ftco-blocks-cover-1">
-    <div class="ftco-cover-1 main-back overlay">
+    <div class="ftco-cover-1 overlay" style="background-image:url({% static 'ca/img/1130.jpeg' %})">
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-6 text-center">
