--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -3,47 +3,6 @@
 
 {% block body %}
 
-<section class="about-us-countdown-area section-padding-100-0" style="background-image:url({% static 'main_page/img/bg-img/college_bg.jpg' %}); background-repeat:
-    no-repeat; background-size: cover;" id="about">
-    <div class="container">
-        <div class="row align-items-center">
-            <!-- About Content -->
-            <div class="col-md-8 mx-auto" style="background-color: rgba(0, 0, 0, 0.7); margin-top: 50px;
-             margin-bottom: 50px; border-radius: 20px; padding: 50px;">
-                <br>
-                <div class="about-content-text" style="color: white;">
-                    <h3>Important Note</h3>
-                    <ul>
-                        <li>1. Exclusively for the workshop participants, we provide accomodation at cheaper rates.
-                            Get accomodation @ Rs.250 per day and enjoy a relaxing stay with 2 meals included.</li>
-                        <br>
-                        <li>2. A single participant may opt to attend two workshops (One on 'Personality Development and
-                            Placement
-                            Preparation' and other on any one of the below mentioned technical topics.)</li>
-
-                    </ul>
-                    <br>
-                    <h3>Workshop Registration Process</h3>
-                    <br>
-                    <ul>
-                        <li style="list-style-type:disc;">
-                            Step 1: Register as a participant and get your ADVITIYA ID. <a
-                                href="{% url 'main_page:register_as_participant' %}" style="color: blue;">(Click
-                                Here)</a>
-                        </li>
-                        <li style="list-style-type:disc;">
-                            Step 2: Register for the workshops.
-                        </li>
-                        <li style="list-style-type:disc;">
-                            Step 3: [Optional] Get accomodation. <a href="{% url 'main_page:workshop_accomodation' %}"
-                                style="color: blue;">(Click Here)</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <!-- Breadcrumb Area End -->
 
 <!-- What We offer Area Start -->
@@ -53,17 +12,61 @@
             <!-- Heading -->
             <div class="col-12">
                 <div class="section-heading-3 text-center wow fadeInUp" data-wow-delay="300ms">
+                    <div class="col-md-8 mx-auto" style="margin-top: 50px;
+                        margin-bottom: 50px; border-radius: 20px; border-style: solid; padding: 50px;
+                        background: #9796f0;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #fbc7d4, #9796f0);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+">
+                        <div class="about-content-text">
+                            <h3>Important Note</h3>
+                            <ul>
+                                <li>1. Exclusively for the workshop participants, we provide accomodation at cheaper
+                                    rates.
+                                    Get accomodation @ Rs.250 per day and enjoy a relaxing stay with 2 meals included.
+                                </li>
+                                <br>
+                                <li>2. A single participant may opt to attend two workshops (One on 'Personality
+                                    Development and
+                                    Placement
+                                    Preparation' and other on any one of the below mentioned technical topics.)</li>
+
+                            </ul>
+                            <br>
+                            <h3>Workshop Registration Process</h3>
+                            <br>
+                            <ul>
+                                <li style="list-style-type:disc;">
+                                    Step 1: Register as a participant and get your ADVITIYA ID. <a
+                                        href="{% url 'main_page:register_as_participant' %}" style="color: blue;">(Click
+                                        Here)</a>
+                                </li>
+                                <li style="list-style-type:disc;">
+                                    Step 2: Register for the workshops.
+                                </li>
+                                <li style="list-style-type:disc;">
+                                    Step 3: [Optional] Get accomodation. <a
+                                        href="{% url 'main_page:workshop_accomodation' %}" style="color: blue;">(Click
+                                        Here)</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <h2>Workshops at IIT Ropar</h2>
                     <a href="{% url 'main_page:workshop_accomodation'  %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
-                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Get
-                        Accomodation</a>
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
+                        <i class="zmdi zmdi-hotel zmdi-hc-lg"></i> Get Accomodation</a>
                 </div>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-md-12">
+                <h2>Technical Workshops</h2><br>
+            </div>
             {% for workshop in workshops %}
+            {% if workshop.workshop_type == "t" %}
             <!-- Single We Offer Area -->
             <div class="col-12 col-md-6 col-xl-4">
                 <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
@@ -99,6 +102,53 @@
                 </div>
 
             </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+
+        <div class="row wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-md-12">
+                <br><br>
+                <h2>Management Workshops</h2><br>
+            </div>
+            {% for workshop in workshops %}
+            {% if workshop.workshop_type == "m" %}
+            <!-- Single We Offer Area -->
+            <div class="col-12 col-md-6 col-xl-4">
+                <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
+                    <!-- Icon -->
+                    <div class="single-blog-thumb">
+                        <center><a href="{% url 'main_page:workshop_register' workshop.id  %}">
+                                <img src="{{ workshop.image.url }}" style="height: 200px;" alt=""></a>
+                        </center>
+                    </div>
+                    <h5>{{workshop.name}}</h5>
+                    <h6>Fee: Rs {{ workshop.fees }}</h6>
+                    {% if workshop.name != "Personality Development and Placement Preparation" %}
+                    <div class="post-meta">
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 8th & 9th February, 2020</a>
+                    </div>
+                    {% else %}
+                    <div class="post-meta">
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 1 Day</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th February, 2020</a>
+                    </div>
+                    {% endif %}
+                    <br>
+                    <a href="{% url 'main_page:workshop_register' workshop.id  %}" class="btn confer-btn-white"
+                        style="border: 2px solid rgb(43, 2, 143); color: black;"
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
+                        Now</a>
+                    <a href="{{ workshop.rulebook }}" class="btn confer-btn-white"
+                        style="border: 2px solid rgb(43, 2, 143); color: black;"
+                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
+                        <i class="zmdi zmdi-info zmdi-hc-lg"></i> info</a>
+
+                </div>
+
+            </div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
