--- a/ca/templates/ca/index.html
+++ b/ca/templates/ca/index.html
@@ -7,38 +7,27 @@
     <div class="ftco-cover-1 overlay" style="background-image:url({% static 'ca/img/1130.jpeg' %})">
         <div class="container">
             <div class="row align-items-center justify-content-center">
-                <div class="col-lg-6 text-center">
-                    <div class='main-heading'></div>
+                <div class="col-md-7 text-center">
+                    <h2 class="mb-4" style="color: whitesmoke; font-weight: 500;"><strong>About Advitiya</strong></h2>
+                    <p style="text-align:justify; font-size:1.3em; font-weight: 500;">
+                        IIT Ropar is organizing the fourth edition of it's annual Science & Technology Festival
+                        "Advitiya" in the first week of February consisting of 72 hours of exhilarating competitions and
+                        technical events. Advitiya has already evolved into a brand within four years of its inception.
+                        In the previous edition, we managed to record a footfall of 15k+ and hosted over 30 events.
+                        Advitiya, in its past few editions, not only has created a buzz in the minds of
+                        Techno-enthusiasts but has also provided its partners and sponsors a platform for their
+                        publicity. With an array of activities that consolidate the vision for times to come, Advitiya
+                        2020 is ready to set the scientific spirits soaring and technological temper ablaze. This year’s
+                        edition will carry forward the tradition set by the previous ones and will encompass a wide
+                        range of scientific and technical activities from fields like Coding, Aeromodelling, Robotics,
+                        Finance, Design and Entrepreneurship with exciting prizes worth over 9 lakh Rupees.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container about-advitiya">
-    <div class="row justify-content-center text-center mb-5">
-        <div class="col-md-6">
-            <h2 class="mb-4"><strong>About Advitiya</strong></h2>
-            <p style="text-align:justify; font-size:1.3em">
-                IIT Ropar is
-                                organizing the fourth edition of it's annual Science & Technology Festival "Advitiya" in the first
-                                week of of February consisting of 72 hours of intense competitions and technical events.
-                                Advitiya has already evolved into a brand within four years of its inception. 
-                                Advitiya achieved more than 15k footfall and conducted 30+ events in its previous edition. 
-                                Advitiya, in its past few editions, not only has created a buzz in the minds of Techno-enthusiasts 
-                                but has also provided its partners and sponsors a platform for their publicity. 
-                                With an array of activities that consolidate the vision for
-                                times to come, Advitiya 2020 is ready to set the scientific spirits soaring and
-                                technological temper ablaze. Advitiya will witness a wide range of scientific and technical activities, 
-                                and novel events from fields like Coding, Aeromodelling, Robotics, Finance, Design and Entrepreneurship 
-                                with total prizes worth as high as 9 lakh Rupees.
-            </p>
-
-        </div>
-    </div>
-
-
-</div>
 <div class="about-advitiya perks">
     <div class="container perks-heading">
         <div class="row justify-content-center text-center">
