--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -50,16 +50,16 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                                     </li>
                             </ul>
                             <a href="{% url 'main_page:benefits'  %}" class="btn confer-btn-white"
-                                style="border: 2px solid rgb(43, 2, 143); color: black;"
+                                style="border: 2px solid rgb(43, 2, 143); color: black; padding: 5px 5px; padding: 8px 25px 40px;"
                                 onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
-                            <i class="zmdi zmdi-assignment"></i> Benefits and Ceritfication</a>
+                            <i class="zmdi zmdi-assignment"> Benefits and Ceritfication</i></a>
                         </div>
                     </div>
                     <h2>Workshops at IIT Ropar</h2>
                     <a href="{% url 'main_page:workshop_accomodation'  %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
-                        <i class="zmdi zmdi-hotel zmdi-hc-lg"></i> Get Accomodation</a>
+                        <i class="zmdi zmdi-hotel zmdi-hc-lg"> Get Accomodation</i></a>
                 </div>
             </div>
         </div>
