changed tsp content

--- a/TSP/templates/TSP/index.html
+++ b/TSP/templates/TSP/index.html
@@ -26,23 +26,34 @@
                 Category 2: Class XI & XII<br></strong>
 
                 The events organized for school students are as follows:<br>
-                1. Advitiya Open Olympiad:
+                <strong>1. Advitiya Open Olympiad:</strong>
                 
                 <ul style="text-align: justify;">
-                <li>Preliminary test on 18 Jan 2020 (Saturday) in respective schools</li>
-                <li>The finale on 8th Feb 2020(Saturday) at IIT Ropar campus</li>
-                <li>The prizes of the competition are worth 25k.</li>
+                <li>Preliminary test on <strong>18 Jan 2020 (Saturday)</strong> in respective schools</li>
+                <li>The finale on <strong> Feb 2020(Saturday)</strong> at IIT Ropar campus</li>
+                <li>The prizes of the competition are  <strong> worth 25k</strong>.</li>
                 <li>Top 25 participants from each category will be selected for the finale.</li>
                 <li>Registration fee for the Olympiad is INR 50</li>
-                <li>Please register your schools at <a href="{% url 'main_page:index'  %}">www.advitiya.in</a> </li>
+                <li>Please register your schools at <a href="{% url 'TSP:home'  %}">www.advitiya/TSP.in</a> </li>
                 </ul>
-                <p style="text-align:justify; font-size: 20.8px;">2. Techwalk <br>
-                3. Junior Scientist Competition:</p>
-                <ul style="text-align: justify;">
-                <li>a. Each school is allowed to bring three projects accompanied by three students each .</li>
-                <li>b. Students should bring a brief printed report along with their project.</li>
-                <li>c. There is no registration fee for this competition .</li>
-                </ul>
+                  <strong>  <p style="text-align:justify; font-size: 20.8px;">2. Techwalk <br></p></strong>
+                    <p style="text-align:justify;font-size: 15px;"> 
+                        On the days of <strong>Advitiya 2020</strong>, all the participating labs in our institute will be open to
+                        the school students. Various departments will be showcasing various cutting-edge
+                        technologies in their particular field. Apart from the labs, there will be an exhibition
+                        where projects made by students, faculties will be displayed. There will be exhibitors
+                        from across the world who will display the emerging technologies. For the visitors,
+                        this will be a great chance to learn, experience and interact with experts from
+                        different scientific fields and also to witness the recent advancements in the field of
+                        science.<br>
+                    </p>
+                   <strong> <p style="text-align:justify; font-size: 20.8px;">3. Junior Scientist Competition:</p></strong>
+                    <ul style="text-align: justify;">
+                    <li>The finale on <strong>8th Feb 2020(Saturday)</strong> at IIT Ropar campus</li>
+                    <li>Each school is allowed to bring three projects accompanied by three students each .</li>
+                    <li>Students should bring a brief printed report along with their project.</li>
+                    <li>There is no registration fee for this competition .</li>
+                    </ul>
             </p>
 
         </div>
