added lecture page

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -143,7 +143,7 @@
                             <h5 class="widget-title"><a href="#" style="color: white;">Talks</a></h5>
                             <!-- Footer Nav -->
                             <ul class="footer-nav">
-                                <li><a href="#">Revealing Soon</a></li>
+                                <li><a href="{% url 'main_page:talks' %}">Click here</a></li>
                             </ul>
                         </div>
                     </div>
