--- a/main_page/static/main_page/css/style.css
+++ b/main_page/static/main_page/css/style.css
@@ -2886,3 +2886,125 @@ h3 {
 
 
 
+/*===========================
+        28.ERROR css 
+===========================*/
+.testimonial-area {
+  padding-top: 100px;
+  padding-bottom: 70px;
+  background-color: #f4f6f7; }
+
+.testimonial-2 {
+  background-color: #fff; }
+
+.single-testimonial {
+  background-color: #fff;
+  padding: 30px;
+  -webkit-box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.1); }
+  .single-testimonial .testimonial-image img {
+    width: 90px;
+    border-radius: 50%;
+    display: inline-block; }
+  .single-testimonial .testimonial-content {
+    padding-top: 25px; }
+    .single-testimonial .testimonial-content .text {
+      font-size: 16px;
+      line-height: 24px;
+      color: #121212;
+      border-bottom: 1px solid #cbced1;
+      padding-bottom: 24px; }
+    .single-testimonial .testimonial-content .author-name {
+      font-size: 18px;
+      font-weight: 600;
+      color: #121212;
+      margin-top: 24px; }
+    .single-testimonial .testimonial-content .sub-title {
+      font-size: 14px;
+      line-height: 24px;
+      color: #a4a4a4; }
+
+.testimonial-active-2 .slick-dots,
+.testimonial-active .slick-dots {
+  text-align: center; }
+  .testimonial-active-2 .slick-dots li,
+  .testimonial-active .slick-dots li {
+    display: inline-block;
+    margin: 0 3px; }
+    .testimonial-active-2 .slick-dots li button,
+    .testimonial-active .slick-dots li button {
+      font-size: 0;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background-color: #cbced1;
+      border: 0;
+      cursor: pointer; }
+    .testimonial-active-2 .slick-dots li.slick-active button,
+    .testimonial-active .slick-dots li.slick-active button {
+      background-color: #38f9d7; }
+
+.single-testimonial-4 {
+  border: 2px solid #cbced1;
+  padding: 25px 30px;
+  border-radius: 8px;
+  background-color: #fff; }
+  .single-testimonial-4 .testimonial-author .author-image img {
+    width: 80px;
+    border-radius: 50%; }
+  .single-testimonial-4 .testimonial-author .author-name {
+    padding-left: 20px; }
+    @media (max-width: 767px) {
+      .single-testimonial-4 .testimonial-author .author-name {
+        padding-left: 0;
+        padding-top: 15px; } }
+    @media only screen and (min-width: 576px) and (max-width: 767px) {
+      .single-testimonial-4 .testimonial-author .author-name {
+        padding-left: 20px;
+        padding-top: 0; } }
+    .single-testimonial-4 .testimonial-author .author-name .name {
+      font-size: 18px;
+      font-weight: 600;
+      line-height: 24px;
+      color: #121212; }
+    .single-testimonial-4 .testimonial-author .author-name .sub-title {
+      font-size: 14px;
+      line-height: 24px;
+      color: #a4a4a4; }
+  .single-testimonial-4 .testimonial-text {
+    margin-top: 25px; }
+    .single-testimonial-4 .testimonial-text .text {
+      font-size: 14px;
+      line-height: 24px;
+      color: #121212; }
+
+.testimonial-active-4 .slick-dots {
+  text-align: center;
+  margin-top: 25px; }
+  .testimonial-active-4 .slick-dots li {
+    display: inline-block;
+    margin: 0 3px; }
+    .testimonial-active-4 .slick-dots li button {
+      font-size: 0;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background-color: #cbced1;
+      border: 0;
+      cursor: pointer; }
+    .testimonial-active-4 .slick-dots li.slick-active button {
+      background-color: #38f9d7; }
+
+.span4 img {
+  margin-right: 10px;
+}
+.span4 .img-left {
+  float: left;
+}
+.span4 .img-right {
+  float: right;
+}
+
+
+
