Add city to participant

--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -23,15 +23,10 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                             <br>
                             <ul>
                                 <li style="list-style-type:disc; text-align: left;">
-                                    Step 1: Register as a participant and get your ADVITIYA ID. <a
-                                        href="{% url 'main_page:register_as_participant' %}" style="color: blue;">(Click
-                                        Here)</a>
+                                    Step 1: Register for the workshops.
                                 </li>
                                 <li style="list-style-type:disc; text-align: left;">
-                                    Step 2: Register for the workshops.
-                                </li>
-                                <li style="list-style-type:disc; text-align: left;">
-                                    Step 3: [Optional] Get accomodation. <a
+                                    Step 2: [Optional] Get accomodation. <a
                                         href="{% url 'main_page:workshop_accomodation' %}" style="color: blue;">(Click
                                         Here)</a>
                                 </li>
@@ -48,9 +43,9 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                                     'Personality Development and Placement
                                     Preparation' and other on any one of the below mentioned technical topics.)
                                     </li>
-                            </ul>
+                            </ul><br>
                             <a href="{% url 'main_page:benefits'  %}" class="btn confer-btn-white"
-                                style="border: 2px solid rgb(43, 2, 143); color: black; padding: 5px 5px; padding: 8px 25px 40px;"
+                                style="border: 2px solid rgb(43, 2, 143); color: black;"
                                 onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
                             <i class="zmdi zmdi-assignment"> Benefits and Ceritfication</i></a>
                         </div>
@@ -81,7 +76,6 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                         </center>
                     </div>
                     <h5>{{workshop.name}}</h5>
-                    <h6>Fee: Rs {{ workshop.fees }}</h6>
                     {% if workshop.name == "Personality Development and Placement Preparation" %}
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 1 Day</a><br>
