--- a/techconnect/templates/techconnect/register.html
+++ b/techconnect/templates/techconnect/register.html
@@ -7,7 +7,7 @@
 <!-- ##### Breadcumb Area Start ##### -->
 <div class="breadcumb-area bg-img" style="background-image: url(img/bg-img/breadcumb.jpg);">
     <div class="bradcumbContent">
-        <h2>Register</h2>
+        <h2>{{ heading }}</h2>
     </div>
 </div>
 <!-- ##### Breadcumb Area End ##### -->
