--- a/techconnect/templates/techconnect/base.html
+++ b/techconnect/templates/techconnect/base.html
@@ -76,6 +76,7 @@
                                     <li><a href="{% url 'main_page:index' %}">Home</a></li>
                                     <li><a href="{% url 'techconnect:about' %}">About</a></li>
                                     <li><a href="{% url 'techconnect:contact' %}">Contacts</a></li>
+                                    <li><a href="{% url 'techconnect:centers' %}">Centers</a></li>
                                     <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScqQ3vzhkoAOe9eMAZEXt-PWovuQGDI7ArH210nXlslbPo3ew/viewform">Register</a></li>
                                 </ul>
                             </div>
@@ -85,7 +86,7 @@
                         <!-- Calling Info -->
                         <div class="calling-info">
                             <div class="call-center">
-                                <a href="tel:+919354518226"><i class="icon-telephone-2"></i> <span>(+91) 93545 18226</span></a>
+                                <a href="tel:+919354518226"><i class="icon-telephone-2"></i> <span>(+91) 9915405007</span></a>
                             </div>
                         </div>
                     </nav>
