--- a/techconnect/templates/techconnect/contact.html
+++ b/techconnect/templates/techconnect/contact.html
@@ -24,6 +24,21 @@
                     </div>
                     <!-- Meta Info -->
                     <div class="teachers-info mt-30">
+                        <h5>Rahul</h5>
+                        <!-- <span>Marketing Proffesor</span><br> -->
+                        <span><a href="tel:+919915405007"><i class="icon-telephone-2"></i>+91 9915405007</a></span>
+                    </div>
+                </div>
+            </div>
+            <!-- Single Teachers -->
+            <div class="col-12 col-sm-6 col-lg-3 mx-auto">
+                <div class="single-teachers-area text-center mb-100 wow fadeInUp" data-wow-delay="400ms">
+                    <!-- Thumbnail -->
+                    <div class="teachers-thumbnail">
+                        <img src="{% static 'techconnect/img/person.png' %}" width="150px" alt="">
+                    </div>
+                    <!-- Meta Info -->
+                    <div class="teachers-info mt-30">
                         <h5>Anand</h5>
                         <!-- <span>Marketing Proffesor</span><br> -->
                         <span><a href="tel:+919354518226"><i class="icon-telephone-2"></i>+91 93545 18226</a></span>
