--- a/techconnect/templates/techconnect/base.html
+++ b/techconnect/templates/techconnect/base.html
@@ -41,9 +41,13 @@
                             <div class="academy-logo">
                                 <a style="font-size: 2em;" href="{% url 'techconnect:index' %}">TechConnect</a>
                             </div>
-                            <div class="login-content">
-                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScqQ3vzhkoAOe9eMAZEXt-PWovuQGDI7ArH210nXlslbPo3ew/viewform">Register</a>
+                            
+                            <div class="academy-logo">
+                                <a style="font-size: 2em;" href="{% url 'main_page:index' %}">Advitiya</a>
                             </div>
+                            <!-- <div class="login-content">
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScqQ3vzhkoAOe9eMAZEXt-PWovuQGDI7ArH210nXlslbPo3ew/viewform">Register</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -76,8 +80,7 @@
                                     <li><a href="{% url 'main_page:index' %}">Home</a></li>
                                     <li><a href="{% url 'techconnect:about' %}">About</a></li>
                                     <li><a href="{% url 'techconnect:contact' %}">Contacts</a></li>
-                                    <li><a href="{% url 'techconnect:centers' %}">Centers</a></li>
-                                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScqQ3vzhkoAOe9eMAZEXt-PWovuQGDI7ArH210nXlslbPo3ew/viewform">Register</a></li>
+                                    <li><a href="{% url 'techconnect:centers' %}">Cities</a></li>
                                 </ul>
                             </div>
                             <!-- Nav End -->
