--- a/techconnect/static/techconnect/style.css
+++ b/techconnect/static/techconnect/style.css
@@ -14,6 +14,39 @@
   margin: 0;
   padding: 0; }
 
+  .module {
+    display: inline-block;
+    width: 300px;
+    height: 300px;
+    margin: 5px 10px 20px 10px;
+    position: relative;
+    text-align: center;
+  }
+  .module img{
+    background: 
+      linear-gradient(
+        rgba(0, 0, 0, 0.6),
+        rgba(0, 0, 0, 0.6)
+      );
+    background-size: cover;
+    border-radius: 50%;
+    width: auto;
+    height: 100%;
+  }
+  .mid h2 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    border-style: solid;
+    color: white;
+    text-transform: uppercase;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 1.7rem;
+    transform: translate(-50%, -50%);
+  }
+
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 14px; }
