--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -25,7 +25,10 @@
     </style>
 </head>
 
-<body style="margin: 0;">
+<body>
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
     <header class="header-area">
         <div class="classy-nav-container breakpoint-off">
             <div class="container">
@@ -58,7 +61,7 @@
 
                                 <li><a href="{% url 'ca:home' %}">CA</a></li>
                                 {% if user.is_authenticated %}
-                                <li><a href="#"><i class="fas fa-user-circle fa-3x"></i></a>
+                                <li><a href="#"><i class="zmdi zmdi-account-circle zmdi-hc-3x"></i></a>
                                     <ul class="dropdown">
                                         <li><a href="{% url 'main_page:profile' %}">Profile</a></li>
                                         <li><a
