--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -38,7 +38,7 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                                     accomodation at cheaper rates.
                                     Get accomodation @ Rs.250 per day and enjoy a relaxing stay with 2 meals included.
                                 </li><br>
-                                <a href="{% url 'main_page:workshop_accomodation'  %}" class="btn confer-btn-white"
+                                <a href="{% url 'main_page:workshop_accomodation_curr'  %}" class="btn confer-btn-white"
                                     style="border: 2px solid rgb(43, 2, 143); color: black;"
                                     onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
                                     <i class="zmdi zmdi-hotel zmdi-hc-lg"> Get Accomodation</i></a>
